<resources>
    <string name="m_CANCEL">Cancel</string>
    <string name="m_CLOSE">Close</string>
    <string name="m_FSI_DOWNLOAD_FYUSE_APP">Post with Fyuse?</string>
    <string name="m_OPEN_LINK_TITLE">Open link?</string>
    <string name="m_POST">Post</string>
    <string name="m_PRIVATE">private</string>
    <string name="m_PUBLIC">public</string>
    <string name="m_UPLOADED_FYUSE">Your fyuse %1$s was successfully uploaded!</string>
    <string name="m_UPLOAD_ADD_DESCRIPTION">Add your description...</string>
    <string name="cancel">Cancel</string>
    <string name="portrait3d_dress_up">Dress up</string>
    <string name="portrait3d_install">Reinstall</string>
    <string name="portrait3d_install_creation">Install Creation+</string>
    <string name="portrait3d_install_instal3d">Install Insta3D</string>
    <string name="portrait3d_print">Print</string>
    <string name="portrait3d_tips_install_dress_up_again">The dressing up app has been uninstalled. You need to reinstall it to use again. Reinstall?</string>
    <string name="portrait3d_tips_install_printing_again">The printing app has been uninstalled. You need to reinstall it to use again. Reinstall?</string>
    <string name="app_name">Multimedia</string>
    <string name="water_mark_weather_temperature_defaultvalue">-</string>
    <string name="water_mark_location_edit_hint">Search or enter location</string>
    <string name="water_mark_mview_tag">watermarkviewtag</string>
    <string name="water_mark_attention_dialog_title_511">Watermark</string>
    <string name="accessibility_review_cancel">Cancel</string>
    <string name="accessibility_review_ok">Done</string>
    <string name="water_mark_my_breakfast">My breakfast</string>
    <string name="water_mark_my_Lunch">My lunch</string>
    <string name="water_mark_my_afternoontea">My tea</string>
    <string name="water_mark_my_dinner">My dinner</string>
    <string name="water_mark_my_supper">My supper</string>
    <string name="city">city</string>
    <string name="other_locationwatermark_defaultlongitude">Longitude</string>
    <string name="other_locationwatermark_defaultlatitude">Latitude</string>
    <string name="other_locationwatermark_longitude">East longitude</string>
    <string name="other_locationwatermark_westlongitude">West longitude</string>
    <string name="other_locationwatermark_northlatitude">North latitude</string>
    <string name="other_locationwatermark_southlatitude">South latitude</string>
    <string name="other_calendarwatermark_sunday_abbreviate">SUN</string>
    <string name="other_calendarwatermark_monday_abbreviate">MON</string>
    <string name="other_calendarwatermark_tuesday_abbreviate">TUE</string>
    <string name="other_calendarwatermark_wednesday_abbreviate">WED</string>
    <string name="other_calendarwatermark_thursday_abbreviate">THU</string>
    <string name="other_calendarwatermark_friday_abbreviate">FRI</string>
    <string name="other_calendarwatermark_saturday_abbreviate">SAT</string>
    <string name="other_calendarwatermark_january_abbreviate">JAN</string>
    <string name="other_calendarwatermark_february_abbreviate">FEB</string>
    <string name="other_calendarwatermark_march_abbreviate">MAR</string>
    <string name="other_calendarwatermark_april_abbreviate">APR</string>
    <string name="other_calendarwatermark_may_abbreviate">MAY</string>
    <string name="other_calendarwatermark_june_abbreviate">JUN</string>
    <string name="other_calendarwatermark_july_abbreviate">JUL</string>
    <string name="other_calendarwatermark_august_abbreviate">AUG</string>
    <string name="other_calendarwatermark_september_abbreviate">SEP</string>
    <string name="other_calendarwatermark_october_abbreviate">OCT</string>
    <string name="other_calendarwatermark_november_abbreviate">NOV</string>
    <string name="other_calendarwatermark_december_abbreviate">DEC</string>
    <string name="other_calendarwatermark_weekday_textview_id">weekdaytext</string>
    <string name="other_calendarwatermark_weekday_selected_imageview_id">selectedicon</string>
    <string name="other_calendarwatermark_nowweek_id">nowweek</string>
    <string name="other_calendarwatermark_week1_id">week1</string>
    <string name="other_calendarwatermark_week2_id">week2</string>
    <string name="other_calendarwatermark_week3_id">week3</string>
    <string name="other_calendarwatermark_week4_id">week4</string>
    <string name="other_calendarwatermark_week5_id">week5</string>
    <string name="other_calendarwatermark_week6_id">week6</string>
    <string name="other_calendarwatermark_sunday_title">suntiltetext</string>
    <string name="other_calendarwatermark_monday_title">montiltetext</string>
    <string name="other_calendarwatermark_tuesday_title">tuetiltetext</string>
    <string name="other_calendarwatermark_wednesday_title">wedtiltetext</string>
    <string name="other_calendarwatermark_thursday_title">thutiltetext</string>
    <string name="other_calendarwatermark_friday_title">fritiltetext</string>
    <string name="other_calendarwatermark_saturday_title">sattiltetext</string>
    <string name="other_calendarwatermark_nowweekday_id">nowweekday</string>
    <string name="other_calendarwatermark_sunday_id">sundaytext</string>
    <string name="other_calendarwatermark_monday_id">mondaytext</string>
    <string name="other_calendarwatermark_tuesday_id">tuesdaytext</string>
    <string name="other_calendarwatermark_wednesday_id">wednesdaytext</string>
    <string name="other_calendarwatermark_thursday_id">thursdaytext</string>
    <string name="other_calendarwatermark_friday_id">fridaytext</string>
    <string name="other_calendarwatermark_saturday_id">saturdaytext</string>
    <string name="other_calendarwatermark_weekcontentsselectedicon_id">weekcontentsselectedicon</string>
    <string name="other_calendarwatermark_nowmonth_id">nowmonth</string>
    <string name="other_calendarwatermark_january_id">january</string>
    <string name="other_calendarwatermark_february_id">february</string>
    <string name="other_calendarwatermark_march_id">march</string>
    <string name="other_calendarwatermark_april_id">april</string>
    <string name="other_calendarwatermark_may_id">may</string>
    <string name="other_calendarwatermark_june_id">june</string>
    <string name="other_calendarwatermark_july_id">july</string>
    <string name="other_calendarwatermark_august_id">august</string>
    <string name="other_calendarwatermark_september_id">september</string>
    <string name="other_calendarwatermark_october_id">october</string>
    <string name="other_calendarwatermark_november_id">november</string>
    <string name="other_calendarwatermark_december_id">december</string>
    <string name="water_mark_category_location">Location</string>
    <string name="water_mark_category_food">Food</string>
    <string name="water_mark_category_time">Time</string>
    <string name="water_mark_category_special">Special</string>
    <string name="water_mark_category_weather">Weather</string>
    <string name="water_mark_category_mood">Mood</string>
    <string name="water_mark_category_sport">Sport</string>
    <string name="water_mark_time_year">year</string>
    <string name="water_mark_time_month">month</string>
    <string name="other_locatonwatermark_defaultlocation">I\'m here</string>
    <string name="other_locatonwatermark_defaultlocation2">Here</string>
    <string name="other_foodwatermark_defaultfoodname">Edit name</string>
    <string name="water_mark_money_yuan">$</string>
    <string name="water_mark_food_19_describe_defaultvalue">More Delicious</string>
    <string name="accessubility_watermark__entrance">More watermarks</string>
    <string name="accessubility_watermark_tapwatermarkprompt">Watermark</string>
    <string name="accessubility_watermark_previous">Previous watermark</string>
    <string name="accessubility_watermark_next">Next watermark</string>
    <string name="water_mark_weathericon_pic_name_unknow">unknown</string>
    <string name="rotate">Rotate</string>
    <string name="simple_editor_illusion">Illusion</string>
    <string name="select_item">Select item</string>
    <string name="select_album">Select album</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="show_hidden_albums">Show hidden albums</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="duration">Duration</string>
    <string name="Import">Import</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="set_hide">Hide/Show album</string>
    <string name="sharesimply_nohelp_again">Do not remind again</string>
    <string name="freeshare_title">Transfer</string>
    <string name="dlna_refresh">Refreshing</string>
    <string name="no_media_title">No content</string>
    <string name="no_media_tips">Take some pictures of you and your friends</string>
    <string name="capture_from_camera">Take pictures now</string>
    <string name="copy">Copy</string>
    <string name="cut">Move</string>
    <string name="paste">Paste</string>
    <string name="photoshare_download">Downloads</string>
    <string name="photoshare_download_short">Download</string>
    <string name="photoshare_create_new_share">New shared album</string>
    <string name="hicloud_gallery">HiCloud gallery</string>
    <string name="log_in_with_huawei_id">Log in with your Huawei ID</string>
    <string name="photoshare_add_picture">Add photos</string>
    <string name="photoshare_edit_my_share">Edit album</string>
    <string name="settings_display">DISPLAY</string>
    <string name="browse_info_display_time">Show time</string>
    <string name="browse_info_display_time_summary">Show when the shot was taken while browsing</string>
    <string name="browse_info_display_location">Show location</string>
    <string name="browse_info_display_location_summary">Show where the shot was taken while browsing</string>
    <string name="favorite_cancel_favorite">Remove</string>
    <string name="favorite_set_as_favorite_general">Favorite</string>
    <string name="view_title">View</string>
    <string name="plus">Enhance beauty strength</string>
    <string name="minus">Reduce beauty strength</string>
    <string name="use_network_dialog_info">Note: Applicable data usage fees may apply.</string>
    <string name="tab_cloud">Cloud</string>
    <string name="use_network_dialog_message">Gallery requires Internet access to provide you with services such as photo location info and photo map placement. Allow access?</string>
    <string name="wallpaper_scrollable">Scrollable</string>
    <string name="wallpaper_online">Online</string>
    <string name="print_or_export">Print or export to PDF</string>
    <string name="slide_settings_title">Slideshow settings</string>
    <string name="start_from_begin">First</string>
    <string name="audio_msg">Add music to your slideshow</string>
    <string name="start_from">Start from</string>
    <string name="current_use">Current</string>
    <string name="start">Start</string>
</resources>