<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_cloudphoto" android:title="@string/tab_cloud" android:showAsAction="ifRoom" />
    <item android:id="@id/action_camera" android:title="@string/switch_to_camera" android:showAsAction="ifRoom" />
    <item android:id="@id/action_gallery" android:visible="false" android:title="@string/app_name" android:showAsAction="ifRoom" />
    <item android:id="@id/action_photoshare_newshare" android:visible="false" android:title="@string/photoshare_create_new_share" android:showAsAction="ifRoom" />
    <item android:id="@id/action_delete" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:id="@id/action_hide" android:title="@string/set_hide" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_select" android:visible="false" android:title="@string/select_album" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_manage_offline" android:visible="false" android:title="@string/make_available_offline" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_sync_picasa_albums" android:visible="false" android:title="@string/sync_picasa_albums" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_config_hide_info" android:visible="false" android:title="@string/show_hidden_albums" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_settings" android:visible="true" android:title="@string/settings" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_photoshare_settings" android:visible="false" android:title="@string/settings" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_general_help" android:visible="false" android:title="@string/help" android:showAsAction="UNKNOWN_DATA_0x0" />
</menu>
