<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/actionbar_translucent" android:id="@id/action_import" android:visible="false" android:title="@string/Import" android:showAsAction="always|withText" />
    <item android:icon="@drawable/bestphoto_frame_selected" android:id="@id/action_share_panorama" android:visible="false" android:title="@string/share_panorama" android:showAsAction="ifRoom" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/bestphoto_frame_selected" android:id="@id/action_share" android:visible="false" android:title="@string/share" android:showAsAction="ifRoom">
        <menu />
    </item>
    <item android:icon="@drawable/bg_controller_bottom" android:id="@id/action_delete" android:visible="false" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_public_save" android:id="@id/action_output" android:visible="false" android:title="@string/save" android:showAsAction="ifRoom" />
    <item android:id="@id/action_edit" android:visible="false" android:title="@string/edit" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_more_edit" android:visible="false" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_rotate_ccw" android:visible="false" android:title="@string/rotate_left" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_rotate_cw" android:visible="false" android:title="@string/rotate" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_crop" android:visible="false" android:title="@string/crop_action" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_setas" android:visible="false" android:title="@string/set_image" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_show_on_map" android:visible="false" android:title="@string/show_on_map" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_hide" android:visible="false" android:title="@string/hide" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_show" android:visible="false" android:title="@string/show" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:icon="@drawable/ab_top_pic" android:id="@id/action_details" android:visible="false" android:title="@string/details" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_remove" android:visible="false" android:showAsAction="UNKNOWN_DATA_0x0" />
    <item android:id="@id/action_keyguard_like" android:visible="false" android:showAsAction="UNKNOWN_DATA_0x0" />
</menu>
