<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/account_login" android:title="@string/log_in_with_huawei_id" android:fragment="com.android.gallery3d.settings.HicloudAccountFragment" />
    <header android:id="@id/cloud_settings" android:title="@string/hicloud_gallery" android:fragment="com.android.gallery3d.settings.HicloudGalleryFragment" />
    <header android:id="@id/view_settings" android:title="@string/view_title" android:fragment="com.android.gallery3d.settings.ViewPhotoFragment" />
    <header android:id="@id/display_settings" android:title="@string/settings_display" android:fragment="com.android.gallery3d.settings.DisplayFragment" />
    <header android:id="@id/freeshare_settings" android:title="@string/freeshare_title" android:fragment="com.android.gallery3d.settings.FreeShareFragment" />
    <header android:id="@id/edit_settings" android:title="@string/edit" android:fragment="com.android.gallery3d.settings.EditSetting" />
</preference-headers>
