<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/albumset_empty_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:src="@drawable/gallery_empty" />
    <TextView android:textSize="18sp" android:textColor="@color/crop_button_notselected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/albumset_empty_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/no_media_title" />
    <TextView android:textSize="14sp" android:textColor="@color/crop_button_notselected" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/albumset_empty_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="30dp" android:text="@string/no_media_tips" android:alpha="0.6" />
    <Button android:textSize="18sp" android:textColor="@drawable/tab_color" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/albumset_empty_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="328dp" android:minWidth="184dp" android:text="@string/capture_from_camera" android:textAlignment="center" android:paddingStart="16dp" android:paddingEnd="16dp" />
</LinearLayout>
