<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/wallpaper_controls_root" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@id/seekbar_controls" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x4001">
        <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/progress_minus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_control_minus" android:contentDescription="@string/minus" android:paddingStart="18dp" android:paddingEnd="18dp" />
        <SeekBar android:id="@id/progress_seekbar" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxHeight="2dp" android:minHeight="2dp" android:layout_weight="1.0" android:paddingStart="8dp" android:paddingEnd="8dp" />
        <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/progress_plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_control_plus" android:contentDescription="@string/plus" android:paddingStart="18dp" android:paddingEnd="18dp" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@id/wallpaper_controls" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.huawei.gallery.wallpaper.TouchableTextView android:textSize="@dimen/action_bar_text_size_small" android:textColor="@color/wallpaper_controll_normal" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/wallpaper_control_blur" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48dp" android:text="@string/simple_editor_illusion" android:drawableTop="@drawable/ic_gallery_blur" android:fontFamily="chnfzxh" />
        <TextView android:id="@id/wallpaper_center_space" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.huawei.gallery.wallpaper.TouchableTextView android:textSize="@dimen/action_bar_text_size_small" android:textColor="@color/wallpaper_controll_normal" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/wallpaper_control_scroll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48dp" android:text="@string/wallpaper_scrollable" android:drawableTop="@drawable/ic_gallery_wallpaper_scrollable" android:fontFamily="chnfzxh" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <com.huawei.gallery.editor.ui.ElasticHorizontalScrollView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/itemScrollView" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layoutDirection="ltr">
        <LinearLayout android:id="@id/list_items" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.huawei.gallery.wallpaper.ui.LabelView android:id="@id/online" android:layout_width="UNKNOWN_DATA_0x7f0d023a" android:layout_height="UNKNOWN_DATA_0x7f0d023a" android:contentDescription="@string/wallpaper_online" />
            <com.huawei.gallery.wallpaper.ui.LabelView android:id="@id/gallery" android:layout_width="UNKNOWN_DATA_0x7f0d023a" android:layout_height="UNKNOWN_DATA_0x7f0d023a" android:contentDescription="@string/app_name" />
        </LinearLayout>
    </com.huawei.gallery.editor.ui.ElasticHorizontalScrollView>
</LinearLayout>
